# nparse

./: .gitignore  .pylintrc  CREDITS.md  Makefile  README.md  attribution.txt  location_server.py  n.spec  nparse.config.json  nparse.config.jsonasd  nparse.config.yaml  nparse.config.yml  nparse.config_tester.yaml  nparse.py  nparse_py.spec  pyproject.toml  requirements-build.txt  requirements-dev.txt  requirements.txt  set_qt_conf.py  splash.xcf
.github/: release.yml
.github/workflows/: nparse-build.yml
config/: __init__.py  config.py  profile.py  profilemanager.py  profiles.py  trigger.py  triggermanager.py  triggerparser.py
config/profiles/: profiles.py
config/triggers/: trigger.py  triggermanager.py  triggerpackage.py
config/ui/: __init__.py  styles.py  triggereditor.py  triggertree.py
data/: config.yaml
data/ui/: _.css  (+3 more)
helpers/: __init__.py  alert.py  application.py  config.py  location_service.py  logger.py  logreader.py  parser.py  qtclasses.py  settings.py  sound.py
locationserver/: Dockerfile  README.md  docker-compose.yml  fake_loc_sender.py  location_server.py
parsers/: LogEvent.py  LogEventParser.py  __init__.py  deathloopvaccine.py  discord.py  helpers.py  maps.py  spells.py
settings/: __init__.py  styles.py  triggereditor.py  triggers.py  triggertree.py
test/: common.py  fake_loc_sender.py  test_profile.py  test_trigger.py  test_triggermanager.py  test_utils.py
utils/: __init__.py  config.old  logger.py  logreader.py  searches.py  sound.py
widgets/: __init__.py  common.py  ncontainers.py  nmover.py  ntimer.py  nwindow.py  parser.py
(+689 files in other folders)
