[project]
name = "nParse"
version = "0.6.8"
authors = [
  { name="nommns" },
]
description = "Provides player location and spell tracking support for Project 1999 by reading the player log."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/nomns/nparse"
Issues = "https://github.com/nomns/nparse/issues"


[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]